--- a/.gitconfig
+++ b/.gitconfig
@@ -78,6 +78,10 @@
     # https://help.github.com/articles/signing-commits-using-gpg/
     gpgsign = true
 
+[core]
+
+    excludesfile = ~/.gitignore
+
 [diff]
 
     # Detect copies as well as renames
