--- a/.gitconfig
+++ b/.gitconfig
@@ -1,3 +1,8 @@
+[init]
+
+    # Copy everything in ~/.git-templates to your per-project .git/ directory when you run git init
+    templatedir = "~/.git-templates"
+
 [alias]
 
     # View abbreviated SHA, description, and history graph of the latest 20 commits
